- added securesocial to the mix.

--- a/web/conf/application.conf
+++ b/web/conf/application.conf
@@ -7,6 +7,14 @@
 # If you deploy your application to several instances be sure to use the same key!
 application.secret="VG_@=IHOskIvZqqb0?5_jIq]^JYHYTp;uCMS`tC[rb7aFh9>OtA7N=]Fnjyhx9QU"
 
+
+# Email settings
+smtp.host=smtp.sendgrid.net
+smtp.port=587
+smtp.ssl=yes
+smtp.user=""
+smtp.password=""
+
 # The application languages
 # ~~~~~
 # application.langs="en"
@@ -56,3 +64,6 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+
+include "securesocial.conf"
