- added the entry points for http, ws, and sockets.

--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -7,6 +7,12 @@ http {
   port = 9999
 }
 
+rabbitmq {
+  host = "localhost"
+  port = 5672
+}
+
+
 services {
   coreHost = "www.telize.com"
   corePort = 80
