working core service

--- a/core/src/main/resources/application.conf
+++ b/core/src/main/resources/application.conf
@@ -2,18 +2,17 @@ akka {
   loglevel = DEBUG
 }
 
-http {
-  interface = "0.0.0.0"
-  port = 9999
-}
-
 rabbitmq {
   host = "localhost"
   port = 5672
 }
 
 
-services {
-  coreHost = "www.telize.com"
-  corePort = 80
+surfkit {
+  host = "localhost"
+  ports{
+    http = 8080
+    ws = 8181
+    tcp = 8282
+  }
 }
