- have the basic message exchange working now. Next working on user module.

--- a/web/conf/application.conf
+++ b/web/conf/application.conf
@@ -15,6 +15,14 @@ smtp.ssl=yes
 smtp.user=""
 smtp.password=""
 
+
+surfkit{
+  core{
+    host = "localhost"
+    port = 8080
+  }
+}
+
 # The application languages
 # ~~~~~
 # application.langs="en"
