- working auth - working get friends

--- a/web/conf/securesocial.conf
+++ b/web/conf/securesocial.conf
@@ -137,7 +137,7 @@ securesocial {
     clientId=1570915959841853
     clientSecret=864ac1568776df1f6479b2add4449596
     # this scope is the minimum SecureSocial requires.  You can add more if required by your app.
-    scope=email
+    scope=email user_friends
   }
 
   google {
