made the database configurable.  Also some changes around the way APPID is handled.

--- a/modules/hangten/src/main/resources/application.conf
+++ b/modules/hangten/src/main/resources/application.conf
@@ -6,3 +6,17 @@ rabbitmq {
   host = "localhost"
   port = 5672
 }
+
+database{
+  neo4j{
+    host: "localhost"
+    port: 7474
+    path: "/db/data/"
+  }
+  jdbc{
+    connection: "jdbc:postgresql://localhost:5432/sktest"
+    user: "postgres"
+    pass: "Neverdull42"
+    driver: "org.postgresql.Driver"
+  }
+}
